--- a/demo-resources/gitops-agent-latest.yaml
+++ b/demo-resources/gitops-agent-latest.yaml
@@ -128,7 +128,7 @@ spec:
           
       8.  **POST PR comment (MANDATORY):**
 
-          * Post the drift reporting generated in step 7.
+          * Post the drift reporting generated in step 7 as pull request reviw, if this step fail the 1st time, resubmit a second one.
           * **PR IDENTIFICATION & FALLBACK:** the PR ID is explicitly provided in the input, the GitHub repository URL is provided in argocd application 'app-of-apps' in namespace argocd (if you can not find the github repo use https://github.com/qasmi/smart-idp)
           * **MUST** use the relevant GitHub tool (`create_and_submit_pull_request_review`) to submit the comment with all your diagnostics and findings to the identified PR.
 
