--- a/demo-resources/gitops-agent-latest.yaml
+++ b/demo-resources/gitops-agent-latest.yaml
@@ -125,6 +125,7 @@ spec:
         * Table format:
           | Resource Kind | Namespace | Name | Action (CREATE / UPDATE / DELETE) |
         * Omit resources with **NO CHANGE** — they must not appear in this table.
+        * Report helm rendring failure only here.
 
         #### 2. Impact Prediction
         * Provide a **short, developer-friendly summary** of the real-world runtime impact.
@@ -140,7 +141,6 @@ spec:
           - “Everything looks correct”
           - “No referenced ConfigMaps, Secrets, or dependencies are missing”
         * Each finding must be evidence-based and concise:
-          - **Finding:** short identifier (e.g., `MISSING_DEPENDENCY`, `UNSCHEDULABLE`, `RESOURCE_QUOTA_EXCEEDED`)
           - **Description:** one-line explanation
           - **Recommendation:** actionable fix when possible.
 
@@ -150,6 +150,7 @@ spec:
           * **PR IDENTIFICATION & FALLBACK:** the PR ID is explicitly provided in the input, the GitHub repository URL is provided in argocd application 'app-of-apps' in namespace argocd (if you can not find the github repo use https://github.com/qasmi/smart-idp)
           * **MUST** use the relevant GitHub tool (`create_and_submit_pull_request_review`) to submit the comment with all your diagnostics and findings to the identified PR.
           * **Important:** describe the issue if you can not submit the review.
+
       ## Semantic Validation Checklist
 
       ### 1. Cluster Compatibility and Resource Structure
