fix loadbalancer service

--- a/gitops-manifests.yaml
+++ b/gitops-manifests.yaml
@@ -37,14 +37,23 @@ spec:
 
         resources: 
           limits:
-            cpu: 500m
+            cpu: 1500m
             memory: 128Mi
           requests:
             cpu: 100m
             memory: 128Mi
+        
+        nodeSelector:
+          node-role: storage
+        tolerations:
+          - key: node-role
+            value: storage
+            operator: Equal
+            effect: NoSchedule
       
         service:
           type: LoadBalancer
+          clusterIP: "172.18.250.0"
 
     repoURL: http://daocloud.github.io/dao-2048/
     targetRevision: "1.2.1"
