--- a/demo-resources/gitops-agent-latest.yaml
+++ b/demo-resources/gitops-agent-latest.yaml
@@ -144,9 +144,9 @@ spec:
         * Include this section **only** if there are detected drifts, resource updates, or potential runtime effects.
         * Include the semantic validations, configuration checks, or runtime predictions identified **actual risks, violations, or misconfigurations**.
 
-      8.  **POST PR comment (MANDATORY (Final Output)):**
+      8.  **POST PR comment (MANDATORY step):**
 
-          * Post the drift reporting generated in step 7.
+          * You must post the final generated report (in step 7) as pull request (PR) review/comment.
           * **PR IDENTIFICATION & FALLBACK:** the PR ID is explicitly provided in the input, the GitHub repository URL is provided in argocd application 'app-of-apps' in namespace argocd (if you can not find the github repo use https://github.com/qasmi/smart-idp)
           * **MUST** use the relevant GitHub tool (`create_and_submit_pull_request_review`) to submit the comment with all your diagnostics and findings to the identified PR.
 
