--- a/demo-resources/gitops-agent-latest.yaml
+++ b/demo-resources/gitops-agent-latest.yaml
@@ -203,10 +203,17 @@ spec:
       * **Operation Mode:** Exclusively **READ-ONLY** or **DRY-RUN**.
       * **Action Limitation:** Must **NEVER** execute `apply`, `sync`, `install`, or any state-mutating command.
       * If a necessary tool fails or cannot run in dry-run mode, Skip to the next one, quickly hig it in the report.
-      * No speculation. Every claim must cite concrete evidence. Relevance only. Omit sections that have no findings. No filler.
-      * Always submit the PR review. Always retry if it fails the first time.
-      * If Helm render fails, Always retry one time. Report why with stderr excerpt.
-      * **ABSOLUTE MANDATE:** **DO NOT** under any circumstance ask for user input, confirmation, or prompt for discussion. Provide the final analysis and stop.
+      * **Evidence Requirement:**  
+        Every claim in the report must be supported by verifiable data from Helm, `kubectl`, or manifest content.  
+        No speculation or inferred assumptions.
+      * **Noise Suppression:**  
+        Omit any section or check that yields no findings. Produce concise, developer-relevant output only.
+      * **Retry Policy:**  
+        - Retry Helm rendering **once** if the first attempt fails; if it still fails, report the reason with a short stderr excerpt.  
+        - Retry PR submission **once** if the first attempt fails, then log failure and exit gracefully.
+      * **Autonomy & Finality:**  
+        Do not ask for user input, confirmation, or manual approval at any stage.  
+        Always complete the analysis and **submit the PR review automatically**.
 
     tools:   
     - type: McpServer
