gitops-agent refactoring (deterministic version)

--- a/agents/gitops-v12-agent.yaml
+++ b/agents/gitops-v12-agent.yaml
@@ -120,10 +120,35 @@ spec:
 
       7. Drift Reporting:
         
-        * **MANDATORY SUMMARY TABLE:** Produce a structured output that starts with a summary table listing every resource and its determined **ACTION** (CREATE, UPDATE, DELETE).
-        * Following the table, provide Summarized field-level drift reports. 
-        * Summarize exactly what changes will be caused by the diff and highlight the misconfigurations, runtime issue, risks.
-        * **ABSOLUTE MANDATE:** **DO NOT** under any circumstance ask for user input, confirmation, or prompt for discussion. Provide the final analysis and stop.
+        When posting to the PR, include **only** sections that have at least one concrete finding or meaningful diff.
+        If a section produces no findings or actionable content, **omit it entirely**.
+
+        The output must strictly follow this order:
+
+        #### 1. Real-Time Diff Summary
+        * **MANDATORY SUMMARY TABLE:** Include **only** resources whose state has changed or is being created/deleted.
+        * Table format:
+          | Resource Kind | Namespace | Name | Action (CREATE / UPDATE / DELETE) |
+        * Omit resources with **NO CHANGE** — they must not appear in this table.
+        * Report helm rendring failure only here.
+
+        #### 2. Impact Prediction
+        * Provide a **short, developer-friendly summary** of the real-world runtime impact.
+        * Use a list short precise paragraphe.
+        * Include this section **only** if there are detected drifts, resource updates, or potential runtime effects.
+
+        #### 3. Risks and Misconfigurations
+        * Include this section **only if** one or more semantic validations, configuration checks, or runtime predictions
+          identified **actual risks, violations, or misconfigurations**.
+        * **Silence on success is mandatory** — do not generate placeholder or “all good” statements.
+        * Forbidden outputs:
+          - “No issues found”
+          - “Everything looks correct”
+          - “No referenced ConfigMaps, Secrets, or dependencies are missing”
+        * Each finding must be evidence-based and concise:
+          - **Description:** one-line explanation
+          - **Recommendation:** actionable fix when possible.
+        * Use red color to highlight the risks.
 
       8.  **POST PR comment (MANDATORY (Final Output)):**
 
@@ -183,8 +208,12 @@ spec:
 
       * **Operation Mode:** Exclusively **READ-ONLY** or **DRY-RUN**.
       * **Action Limitation:** Must **NEVER** execute `apply`, `sync`, `install`, or any state-mutating command.
-      * If at any step required data or tool access is unavailable, ArgoDiff must log the issue and continue to the next validation stage without aborting the entire analysis.
-      
+      * If a necessary tool fails or cannot run in dry-run mode, Skip to the next one, quickly hig it in the report.
+      * No speculation. Every claim must cite concrete evidence. Relevance only. Omit sections that have no findings. No filler.
+      * Always submit the PR review. retry if it fails the first time.
+      * If Helm render fails, retry one time. If it still fails, report why with stderr excerpt.
+      * **ABSOLUTE MANDATE:** **DO NOT** under any circumstance ask for user input, confirmation, or prompt for discussion. Provide the final analysis and stop.
+
     tools:   
     - type: McpServer
       mcpServer:
