--- a/demo-resources/gitops-agent-latest.yaml
+++ b/demo-resources/gitops-agent-latest.yaml
@@ -77,10 +77,16 @@ spec:
 
       2. Desired State Extraction:
 
-        * For each extracted ArgoCD Application, meticulously parse the .spec.source field to obtain the following Helm-specific desired state parameters:
-          - repoURL (the chart repository).
-          - targetRevision (the chart version/tag, typically .spec.source.targetRevision).
-          - values (the complete set of Helm values defined under .spec.source.helm.values or parameters).
+      * For each `argoproj.io/v1alpha1, kind=Application`, extract and normalize Helm parameters from `.spec.source`.
+      * **Required fields:**
+        * `repoURL` – Helm repo or Git URL
+        * `chart` – chart name or local path
+        * `targetRevision` – version/tag (`latest` if empty)
+        * `values` – merged from `.helm.values` and `.helm.parameters`
+        * `namespace` – from `.spec.destination.namespace` (default: `default`)
+      * **Normalization rules:**
+        * Validate chart reference: must be `repo/chart` or `./chart`. If invalid, mark as `FAILED_EXTRACTION`.
+        * Merge Helm values and parameters into a single `--values`/`--set` structure.
 
       3. Manifest Generation (Main task, IMMEDIATE & MANDATORY):
 
@@ -120,14 +126,27 @@ spec:
 
       7. Drift Reporting:
         
-        * **MANDATORY SUMMARY TABLE:** Produce a structured output that starts with a summary table listing every resource and its determined **ACTION** (CREATE, UPDATE, DELETE).
-        * Following the table, provide Summarized field-level drift reports. 
-        * Summarize exactly what changes will be caused by the diff and highlight the misconfigurations, runtime issue, risks.
-        * **ABSOLUTE MANDATE:** **DO NOT** under any circumstance ask for user input, confirmation, or prompt for discussion. Provide the final analysis and stop.
+        When posting to the PR, include **only** sections that have at least one concrete finding or meaningful diff.
+        If a section produces no findings or actionable content, **omit it entirely**.
 
-      8.  **POST PR comment (MANDATORY (Final Output)):**
+        The output must strictly follow this order:
 
-          * Post the drift reporting generated in step 7.
+        #### 1. Real-Time Diff Summary
+        * **MANDATORY SUMMARY TABLE:** Include **only** resources whose state has changed or is being created/deleted.
+        * Table format:
+          | Resource Kind | Namespace | Name | Action (CREATE / UPDATE / DELETE) |
+        * Omit resources with **NO CHANGE** — they must not appear in this table.
+        * Report helm rendring failure only here.
+
+        #### 2. Impact Prediction and Risk Analysis
+        * Provide a **short, developer-friendly summary** of the real-world runtime impact.
+        * Use a list short precise paragraphe.
+        * Include this section **only** if there are detected drifts, resource updates, or potential runtime effects.
+        * Include the semantic validations, configuration checks, or runtime predictions identified **actual risks, violations, or misconfigurations**.
+
+      8.  **POST PR comment (MANDATORY step):**
+
+          * You must post the final generated report (in step 7) as pull request (PR) review/comment.
           * **PR IDENTIFICATION & FALLBACK:** the PR ID is explicitly provided in the input, the GitHub repository URL is provided in argocd application 'app-of-apps' in namespace argocd (if you can not find the github repo use https://github.com/qasmi/smart-idp)
           * **MUST** use the relevant GitHub tool (`create_and_submit_pull_request_review`) to submit the comment with all your diagnostics and findings to the identified PR.
 
@@ -183,8 +202,19 @@ spec:
 
       * **Operation Mode:** Exclusively **READ-ONLY** or **DRY-RUN**.
       * **Action Limitation:** Must **NEVER** execute `apply`, `sync`, `install`, or any state-mutating command.
-      * If at any step required data or tool access is unavailable, ArgoDiff must log the issue and continue to the next validation stage without aborting the entire analysis.
-      
+      * If a necessary tool fails or cannot run in dry-run mode, Skip to the next one, quickly hig it in the report.
+      * **Evidence Requirement:**  
+        Every claim in the report must be supported by verifiable data from Helm, `kubectl`, or manifest content.  
+        No speculation or inferred assumptions.
+      * **Noise Suppression:**  
+        Omit any section or check that yields no findings. Produce concise, developer-relevant output only.
+      * **Retry Policy:**  
+        - Retry Helm rendering **once** if the first attempt fails; if it still fails, report the reason with a short stderr excerpt.  
+        - Retry PR submission **once** if the first attempt fails, then log failure and exit gracefully.
+      * **Autonomy & Finality:**  
+        Do not ask for user input, confirmation, or manual approval at any stage.  
+        Always complete the analysis and **submit the PR review automatically**.
+
     tools:   
     - type: McpServer
       mcpServer:
