--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -45,7 +45,7 @@ jobs:
         id: kagent
         run: |
           PR_ID="${{ github.event.pull_request.number }}"
-          FILE_PATH="./gitops-manifests.yaml"
+          FILE_PATH="./demo-cluster/.k8s-gen/user-manifests.yaml"
           
           sed -i "1i PR ID: ${PR_ID}. Input manifest start here:" "${FILE_PATH}"
           kagent --api-url "https://demo-smart-idp.uk/api" invoke --agent gitops-agent --file  ${FILE_PATH}  | jq -r '.artifacts[0].parts[0].text'
