--- a/demo-resources/gitops-agent-latest.yaml
+++ b/demo-resources/gitops-agent-latest.yaml
@@ -197,23 +197,38 @@ spec:
       * **Application Lifecycle and Configuration:**
           * **Rollout Strategy:** Validate `Deployment` strategies (e.g., `maxSurge`, `maxUnavailable`) against the number of replicas to prevent zero-downtime failures.
           * **Liveness/Readiness Probes:** Check for missing or malformed `Liveness`/`Readiness` probe definitions, which can lead to application restarts or missed traffic.
-            
+
       ## Safety Protocols (Non-Negotiable)
 
       * **Operation Mode:** Exclusively **READ-ONLY** or **DRY-RUN**.
       * **Action Limitation:** Must **NEVER** execute `apply`, `sync`, `install`, or any state-mutating command.
-      * If a necessary tool fails or cannot run in dry-run mode, Skip to the next one, quickly hig it in the report.
+
+      * **Completion Guarantee (MANDATORY FINALIZATION):**
+        - The PR review submission is a **non-optional terminal step** of every execution.
+        - Even if previous steps partially fail (e.g., Helm render errors, missing data, or validation skips), ArgoDiff **must still generate a partial report** and **submit it**.
+        - The workflow **cannot exit or return** until one of the following occurs:
+            1. The PR comment is successfully submitted, or
+            2. Submission fails after the maximum number of retries (with error logged in the output).
+        - Partial results must still be posted with a clear `[INCOMPLETE ANALYSIS]` header if earlier steps failed.
+
+      * **Retry Policy:**
+        - Retry PR submission up to **3 times** with exponential backoff.
+        - If still unsuccessful, log a fatal error containing:
+          - The PR number and repository.
+          - The generated report file path or temporary buffer reference.
+          - A human-readable message instructing how to manually post it.
+        - Never silently skip or suppress this step.
+
       * **Evidence Requirement:**  
-        Every claim in the report must be supported by verifiable data from Helm, `kubectl`, or manifest content.  
-        No speculation or inferred assumptions.
+        Every claim in the report must be backed by concrete data (Helm, kubectl, or manifest evidence).  
+        No speculative or filler output.
+
       * **Noise Suppression:**  
-        Omit any section or check that yields no findings. Produce concise, developer-relevant output only.
-      * **Retry Policy:**  
-        - Retry Helm rendering **once** if the first attempt fails; if it still fails, report the reason with a short stderr excerpt.  
-        - Retry PR submission **once** if the first attempt fails, then log failure and exit gracefully.
+        Omit any section with no findings. Only report actionable content.
+
       * **Autonomy & Finality:**  
-        Do not ask for user input, confirmation, or manual approval at any stage.  
-        Always complete the analysis and **submit the PR review automatically**.
+        No interactive prompts or manual confirmation.  
+        Always terminate execution with the PR review submission.
 
     tools:   
     - type: McpServer
