--- a/demo-resources/gitops-agent-latest.yaml
+++ b/demo-resources/gitops-agent-latest.yaml
@@ -138,12 +138,15 @@ spec:
         * Omit resources with **NO CHANGE** — they must not appear in this table.
         * Report helm rendring failure only here.
 
-        #### 2. Impact Prediction and Risk Analysis
+        #### 2. Impact Prediction
         * Provide a **short, developer-friendly summary** of the real-world runtime impact.
         * Use a list short precise paragraphe.
         * Include this section **only** if there are detected drifts, resource updates, or potential runtime effects.
-        * Include the semantic validations, configuration checks, or runtime predictions identified **actual risks, violations, or misconfigurations**.
 
+        #### 3. Risk Analysis
+        * Only Include relevent risks, violations, or misconfigurations** detected by the semantic validations, configuration checks, or runtime predictions.
+        * Include this section when relevant **only**.
+        
       8.  **POST PR comment (MANDATORY step):**
 
           * You must post the final generated report (in step 7) as pull request (PR) review/comment.
