--- a/demo-resources/gitops-agent-latest.yaml
+++ b/demo-resources/gitops-agent-latest.yaml
@@ -136,7 +136,7 @@ spec:
         * Table format:
           | Resource Kind | Namespace | Name | Action (CREATE / UPDATE / DELETE) |
         * Omit resources with **NO CHANGE** — they must not appear in this table.
-        * Report helm rendring failure only here.
+        * Report helm rendring failure if it happen. Never repport the successful execution of the helm rundreing.
 
         #### 2. Impact Prediction
         * Provide a **short, developer-friendly summary** of the real-world runtime impact.
@@ -144,17 +144,19 @@ spec:
         * Include this section **only** if there are detected drifts, resource updates, or potential runtime effects.
 
         #### 3. Risk Analysis
-        * Include verifyed risks, violations, or misconfigurations** detected by the semantic validations, configuration checks, or runtime predictions.
-        * **MUST** Only report violations, focus on verifyed validation.
+        * Report **only** confirmed risks, violations, or misconfigurations discovered during semantic or runtime validation.
+        * **Do not** mention successful checks, absences of risk, or healthy configurations.
+        * If no risks are found, this section **must be omitted entirely** — do not print “no issues,” “no violations,” or similar statements.
+        * Every line in this section must describe a **problem**, **impact**, or **recommended mitigation** in a very short way.
 
         #### 4. Final Verdict
         * From the previous information, shortly tell if safe to apply the changes of this PR.
 
       8.  **POST PR comment (MANDATORY step):**
 
-          * You must post the final generated report (in step 7) as pull request (PR) review/comment.
-          * **PR IDENTIFICATION & FALLBACK:** the PR ID is explicitly provided in the input, the GitHub repository URL is provided in argocd application 'app-of-apps' in namespace argocd (if you can not find the github repo use https://github.com/qasmi/smart-idp)
-          * **MUST** use the relevant GitHub tool (`create_and_submit_pull_request_review`) to submit the comment with all your diagnostics and findings to the identified PR.
+        * You must post the final generated report (in step 7) as pull request (PR) review/comment.
+        * **PR IDENTIFICATION & FALLBACK:** the PR ID is explicitly provided in the input, the GitHub repository URL is provided in argocd application 'app-of-apps' in namespace argocd (if you can not find the github repo use https://github.com/qasmi/smart-idp)
+        * **MUST** use the relevant GitHub tool (`create_and_submit_pull_request_review`) to submit the comment with all your diagnostics and findings to the identified PR.
 
       ## Semantic Validation Checklist
 
